--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
     <title>AirBnB clone</title>
     <link rel="stylesheet" href="./styles/4-common.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
