meta tag mobile friendly

--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8">
     <title>AirBnB clone</title>
     <link rel="stylesheet" href="./styles/4-common.css">
     <link rel="stylesheet" href="./styles/3-footer.css">
@@ -62,7 +62,7 @@
             </div>
 
             <div class="user"><p><strong>Owner:</strong> Sebastian</p></div>
-            <div class="description">loreasdasdasdasdasdasd lorem   Lorem ipsum dolor sit amet consectetur adipisicing elit. Error soluta sint molestias consequuntur similique illo fugiat, sapiente nulla magnam modi ipsam, quo perferendis doloremque hic asperiores! Ullam omnis nam sequi!</div>
+            <div class="description">Huge family flat</div>
             <div class="amenities-2">
                 <h2>Amenities</h2>
                 <ul>
@@ -75,11 +75,11 @@
                 <h2>2 Reviews</h2>
                 <ul>
                     <li>
-                        <h3>From Martha 9 Sept 2021</h3>
-                        <p>This space will be better</p>
+                        <h3>From Sandra 9 Oct 2021</h3>
+                        <p>This space is hectic</p>
                     </li>
                     <li>
-                        <h3>From Bob Dylan the 27th January 2017</h3>
+                        <h3>From Freddy Mercury the 27th January 2020</h3>
                         <p>Such an epic place!</p>
                     </li>
                 </ul>
@@ -97,8 +97,8 @@
                 <div class="number_bathrooms">4 Bathrooms</div>
             </div>
 
-            <div class="user"><p><strong>Owner:</strong> Camilo</p></div>
-            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatem illum, quo harum possimus dolorum laudantium aspernatur reprehenderit tenetur culpa neque magnam alias magni? Harum ullam est voluptas repellendus pariatur?</div>
+            <div class="user"><p><strong>Owner:</strong> Andres Barrera</p></div>
+            <div class="description">Apartment to enjoy with family</div>
             <div class="amenities-2">
                 <h2>Amenities</h2>
                 <ul>
@@ -109,8 +109,8 @@
                 <h2>1 Review</h2>
                 <ul>
                     <li>
-                        <h3>From Leydy 1 Jan 2011</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident modi esse vero architecto incidunt omnis sint minus, facere iste soluta in quaerat hic sit adipisci. Officiis deleniti eum est vero.</p>
+                        <h3>From Leydy 1 Nov 2020</h3>
+                        <p>Lovey house for short stays</p>
                     </li>
                 </ul>
             </div>
@@ -127,8 +127,8 @@
                 <div class="number_bathrooms">2 Bathrooms</div>
             </div>
 
-            <div class="user"><p><strong>Owner:</strong> Edgar</p></div>
-            <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quisquam quaerat, in ratione molestias beatae soluta tempore ullam eveniet. Aut, ab sequi enim perspiciatis eveniet amet perferendis nisi dolorem blanditiis.</div>
+            <div class="user"><p><strong>Owner:</strong> Sebastian V.</p></div>
+            <div class="description">A great hotel room</div>
             <div class="amenities-2">
                 <h2>Amenities</h2>
                 <ul>
@@ -140,15 +140,15 @@
                 <h2>3 Reviews</h2>
                 <ul>
                     <li>
-                        <h3>From Sebastian 6 Sept 1995</h3>
+                        <h3>From Sebastian B. 6 Sept 2020</h3>
                         <p>What an amazing place, beatifull view, extremely recommended</p>
                     </li>
                     <li>
-                        <h3>From lorena 16 March 2004</h3>
+                        <h3>From lorena 16 March 2020</h3>
                         <p>The place is not as good as images shows</p>
                     </li>
                     <li>
-                        <h3>From Lina 19 March 2004</h3>
+                        <h3>From Lina 19 March 2020</h3>
                         <p>I would say the host is the best!</p>
                     </li>
                 </ul>
